src/test/deca/context/invalid/douDecl_param_01_so.deca
// Description:
//    Teste la double déclaration de paramètre au sein d'une même méthode
//
// Resultats:
//    Ligne 11: Il existe déjà un paramètre de nom x dans la même méthode
//
// Historique:
//    cree le 20/01/2023
class A{
    int x;
    void setXX(int x, int x){
    this.x = x;
    }
}